# gpt_llama

./: pyproject.toml
source/: main.py
source/data/: gpt_4o_mini.json  llama_3_1.json  llama_3_7.json
source/stats/: output.csv  statistics.json
try_try/: try.py
